force-app/main/default/objects/Invoice_User_Note__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date of user note</description>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>