force-app/main/default/objects/Invoice_User_Note__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <description>This is the associated Invoice in Salesforce</description>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Invoice User Notes</relationshipLabel>
    <relationshipName>Invoice_User_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>